force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/bt_stripe__Ship_To_Lead__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Ship_To_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead related to the shipping of this Sales Document.</description>
    <inlineHelpText>The Lead related to the shipping of this Sales Document.</inlineHelpText>
    <label>Lead (Ship To)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales Documents (Ship To)</relationshipLabel>
    <relationshipName>Sales_Documents_Ship_To</relationshipName>
    <type>Lookup</type>
</CustomField>