force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/bt_stripe__Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Status__c</fullName>
    <description>The status of this Sales Document.</description>
    <inlineHelpText>The status of this Sales Document.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Ready To Bill</fullName>
            </value>
            <value>
                <fullName>Uncollectible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>