force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/bt_stripe__Stripe_Hosted_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Hosted_Invoice_Link__c</fullName>
    <description>When a hosted invoice link is available from Stripe with the use of Stripe Billing, this link will auto-populate via webhook.</description>
    <inlineHelpText>When a hosted invoice link is available from Stripe with the use of Stripe Billing, this link will auto-populate via webhook.</inlineHelpText>
    <label>Stripe Hosted Invoice Link</label>
    <type>Url</type>
</CustomField>