force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/bt_stripe__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>