force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/bt_stripe__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Total_Amount__c</fullName>
    <description>The subtotal plus the tax of this Sales Document.</description>
    <inlineHelpText>The net amount plus tax of this Sales Document.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>