force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/bt_stripe__View_In_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__View_In_Stripe__c</fullName>
    <formula>IF(bt_stripe__Customer__r.bt_stripe__Payment_Gateway__r.bt_stripe__Test_Mode__c ,HYPERLINK(&apos;https://dashboard.stripe.com/test/invoices/&apos;+bt_stripe__Stripe_Invoice_Id__c,&apos;View&apos;),HYPERLINK(&apos;https://dashboard.stripe.com/invoices/&apos;+bt_stripe__Stripe_Invoice_Id__c,&apos;View&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe URL</label>
    <type>Text</type>
</CustomField>