force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Name__c</fullName>
    <formula>conference360__Event__r.Name</formula>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>