force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Start_Date__c</fullName>
    <formula>conference360__Event__r.conference360__Event_Start_Date__c</formula>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>