force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Event_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_URL__c</fullName>
    <formula>conference360__Event__r.conference360__Event_Page_URL__c</formula>
    <label>Event URL</label>
    <type>Text</type>
</CustomField>