force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Lead__c.field-meta.xml
<CustomField>
    <fullName>conference360__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales Documents</relationshipLabel>
    <relationshipName>Sales_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>