force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Primary_Registrant_Email__c.field-meta.xml
<CustomField>
    <fullName>conference360__Primary_Registrant_Email__c</fullName>
    <formula>IF( ISNULL( bt_stripe__Bill_To_Contact__c ) , conference360__Lead__r.Email , bt_stripe__Bill_To_Contact__r.Email )</formula>
    <label>Primary Registrant Email</label>
    <type>Text</type>
</CustomField>