force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Primary_Registrant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Primary_Registrant_First_Name__c</fullName>
    <formula>IF(ISNULL(bt_stripe__Bill_To_Contact__c), conference360__Lead__r.FirstName , bt_stripe__Bill_To_Contact__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Registrant First Name</label>
    <type>Text</type>
</CustomField>