force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Venue_City__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_City__c</fullName>
    <formula>conference360__Event__r.conference360__Venue_City__c</formula>
    <label>Venue City</label>
    <type>Text</type>
</CustomField>