force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Venue_Country__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_Country__c</fullName>
    <formula>TEXT(conference360__Event__r.conference360__Venue_Country__c)</formula>
    <label>Venue Country</label>
    <type>Text</type>
</CustomField>