force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/conference360__Venue_State_Province__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_State_Province__c</fullName>
    <formula>conference360__Event__r.conference360__Venue_State_Province__c</formula>
    <label>Venue State/Province</label>
    <type>Text</type>
</CustomField>