force-app/main/default/objects/bt_stripe__Sales_Document__c/recordTypes/bt_stripe__Order.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Order</fullName>
    <active>true</active>
    <description>Deprecated - No longer used.</description>
    <label>Order</label>
</RecordType>