force-app/main/default/objects/bt_stripe__Sales_Document__c/listViews/bt_stripe__All_Orders.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All_Orders</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Bill_To__c</columns>
    <columns>bt_stripe__Contact__c</columns>
    <columns>bt_stripe__Subject__c</columns>
    <columns>bt_stripe__Status__c</columns>
    <columns>bt_stripe__Issue_Date__c</columns>
    <columns>bt_stripe__Expiration_Date__c</columns>
    <columns>bt_stripe__Total_Amount__c</columns>
    <columns>bt_stripe__Balance_Due_Amount__c</columns>
    <columns>bt_stripe__Balance_Paid_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>bt_stripe__Sales_Document__c.bt_stripe__Order</value>
    </filters>
    <label>All Orders</label>
</ListView>